[EFL][WK2] Fix compilation warning in Minibrowser https://bugs.webkit.org/show_bug.cgi?id=130132

Patch by Sanghyup Lee <sh53.lee@samsung.com> on 2014-03-13
Reviewed by Csaba Osztrogonác.

Replace mktemp() with mkstemp() to fix compilation warning in MiniBrowser.

* MiniBrowser/efl/main.c:
(on_download_request):

Canonical link: https://commits.webkit.org/148186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165596 268f45cc-cd09-0410-ab3c-d52691b4dbfc